# altenia

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 000_schema_migrations.sql  001_create_users.sql  002_create_refresh_tokens.sql  003_create_organizations.sql  004_create_organization_members.sql  005_create_projects.sql  006_create_api_keys.sql  007_enable_timescaledb.sql  008_create_logs.sql  009_create_log_notify.sql  010_create_filter_presets.sql  011_create_alerts.sql  012_add_retention_columns.sql  013_create_metrics.sql  014_create_metrics_aggregates.sql  015_create_spans.sql  016_add_users_deleted_at.sql  017_add_users_display_name.sql  018_create_organization_activities.sql  019_create_organization_invites.sql  020_add_users_allow_invites.sql  021_add_invite_activity_types.sql
backend/scripts/: docker-entrypoint.sh  run-migrations.sh
backend/src/: config.rs  main.rs
backend/src/modules/: mod.rs
backend/src/modules/alerts/: mod.rs
backend/src/modules/alerts/application/: dto.rs  mod.rs
backend/src/modules/alerts/domain/: errors.rs  mod.rs
backend/src/modules/alerts/infrastructure/: mod.rs
backend/src/modules/auth/: mod.rs
backend/src/modules/auth/application/: dto.rs  mod.rs  ports.rs
backend/src/modules/logging/: mod.rs
backend/src/modules/metrics/: mod.rs
backend/src/modules/organizations/: mod.rs
backend/src/modules/otlp/: mod.rs
backend/src/modules/projects/: mod.rs
backend/src/modules/retention/: mod.rs
backend/src/modules/traces/: mod.rs
deploy/: .env.example  (+2 more)
(+249 files in other folders)
